--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -6,7 +6,7 @@
 # Website name
 title: Javier Moreno
 # Website URL
-baseURL: 'https://example.com/'
+baseURL: 'http://www.javiermorenoj.com/'
 
 ############################
 ## LANGUAGE
