--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -5,8 +5,8 @@
 
 # Appearance
 appearance:
-  mode: system
-  color: blue
+  mode: light
+  color: sky
 
 # SEO
 marketing:
@@ -31,6 +31,7 @@ header:
   navbar:
     enable: true
     blox: "navbar"
+    align: "right"
     fixed_to_top: true
     show_search: true
     show_theme_chooser: true
